discussion/kv_engine/162025/162025_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace CM::queueLock - extra on expel

Change-Id: I8f97afc70e3fe19a6246c4d14709ad72f45a098d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-22 03:13:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-22 03:18:30.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34235/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:533:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34235/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40218/ : FAILURE

Compile error at ..\kv_engine\logger\logger_benchmark.cc(27): error C3867: "benchmark::State::thread_index": non-standard syntax; use "&" to create a pointer to member ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40218/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12676/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:533:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:557:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:570:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:594:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12676/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:533:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12676/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2316/ : FAILURE

Compile error at [2021-09-22T03:15:10.991Z] tlm/deps/googletest.exploded/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2316/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14545/ : FAILURE

Compile error at [2021-09-22T03:16:09.956Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14545/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14292/ : FAILURE

Compile error at [2021-09-22T03:15:54.708Z] tlm/deps/googletest.exploded/include/gtest/gtest-printers.h:291:36:
error: no matching function for call to ?testing::internal::internal_stream_operator_without_lexical_name_lookup::StreamPrinter::PrintValue(const cb::mcbp::ClientOpcode&, std::nullptr_t)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14292/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15052/ : FAILURE

Compile error at [2021-09-22T03:16:06.051Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/build/tlm/deps/googletest.exploded/include/gtest/internal/gtest-type-util.h:154:16:
error: too few template arguments for class template "Types"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13434/ : FAILURE

Compile error at [2021-09-22T03:16:13.088Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:35:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13434/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22558/ : FAILURE

Compile error at [2021-09-22T03:17:02.618Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/benchmarks/hash_table_bench.cc:35:19:
error: reference to non-static member function must be called; did you mean to call it with no arguments?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22558/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2348/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2348/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11467/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2021-09-23 12:53:48.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
